--- a/public/css/form_filter.css
+++ b/public/css/form_filter.css
@@ -4,7 +4,7 @@
     text-align: center;
     font-weight: bold;
     font-size: .9rem;
-    background-color: #fa6e4f;
+    background-color: #000;
     color: white;
 }
 .form_filter ul  {
@@ -13,18 +13,18 @@
  background-color: #FFF7F0 ;
  }
 .form_filter li  {
-    border-bottom: 1px solid #FF8C20;
+    border-bottom: 1px solid #000;
     padding: 5px;
  }
  .form_filter li:last-child{
     border-bottom: none;
  }
 .form_filter li a {
-   color:  #FF8C20;
+   color:  #000;
    transition: color 0.5s;
 }
 .form_filter li a:hover {
-    color:  #A04D00 ;
+    color:  #000 ;
  }
 
 
@@ -37,7 +37,7 @@
      border-radius: 5px;
      box-shadow: inset 0 1px 2px #9d968f;
  }
- 
+
  .form_filter .progress {
    position: absolute;
    height: 100%;
@@ -48,10 +48,10 @@
      -45deg, #C7DB6B 0, #C7DB6B 3px, #b7ca63 3px, #b7ca63 6px
    );
    box-shadow: inset 0 1px 2px #6f9163;
-  background-attachment: fixed; 
- 
+  background-attachment: fixed;
+
  }
- 
+
  .form_filter .range-input input {
    -webkit-appearance: none;
    position: absolute;
@@ -74,7 +74,7 @@
    ;
    pointer-events: auto;
  }
- 
+
  .form_filter .text-range .text-min,
  .form_filter .text-range .text-max{
    position: absolute;
@@ -94,4 +94,3 @@
    right: 0;
    transform: translateX(50%);
  }
- 
